rpi5/lidarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lidarr.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: lidarr
          port: 80
  tls:
    secretName: lidarr-cert-tls
    domains:
      - main: lidarr.internal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: lidarr
      port:
        number: 80
  tls:
    - hosts:
        - lidarr
